<resources>
    <string name="app_name">Air Touch S</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="version">Air Touch S</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data available</string>
    <string name="no_network">We are having trouble reaching to internet, please ensure if your smart phone connects to a valid Wi-Fi.</string>
    <string name="wapi_router_security_open">Open</string>
    <string name="wapi_router_security_wep">WEP</string>
    <string name="wapi_router_security_wpa_aes">WPA AES</string>
    <string name="wapi_router_security_wpa_tkip">WPA TKIP</string>
    <string name="wapi_router_security_wpa2_aes">WPA2 AES</string>
    <string name="wapi_router_security_wpa2_tkip">WPA2 TKIP</string>
    <string name="wapi_router_security_wpa2_mixed">WPA2 Mixed</string>
    <string name="enroll_skip">Cancel</string>
    <string name="enroll_one">1</string>
    <string name="enroll_two">2</string>
    <string name="enroll_three">3</string>
    <string name="enroll_four">4</string>
    <string name="enroll_title1">Find your device</string>
    <string name="enroll_title2">Connect to your device</string>
    <string name="enroll_title3">Connect your device to\nhome Wi-Fi</string>
    <string name="enroll_title4">Name your device</string>
    <string name="enroll_scanning">Scanning</string>
    <string name="enroll_not_found">Air Touch not found.</string>
    <string name="enroll_found">Your device has been found</string>
    <string name="enroll_connecting">Connecting</string>
    <string name="enroll_home_wifi">home WIFI</string>
    <string name="enroll_open_wifi">Please ensure if your smart phone enables Wi-Fi.</string>
    <string name="enroll_networks">Available networks</string>
    <string name="enroll_back">Back</string>
    <string name="enroll_next">Next</string>
    <string name="enroll_rescan">Rescan</string>
    <string name="enroll_password">Password</string>
    <string name="enroll_hint_ssid">Enter network name</string>
    <string name="enroll_hint_password">Enter password</string>
    <string name="enroll_ssid_security">Security</string>
    <string name="enroll_ssid">SSID</string>
    <string name="enroll_other_network">Other network</string>
    <string name="enroll_done">Done</string>
    <string name="enroll_other">Other&#8230;</string>
    <string name="enroll_error">Operation error.</string>
    <string name="enroll_wait">Please wait while we add your device, this may take about a minute.</string>
    <string name="enroll_success">Connection succeed.</string>
    <string name="email_format_wrong">Email format is wrong</string>
    <string name="enroll_quit">Do you want to quit adding device?</string>
    <string name="quit">Do you want to quit?</string>
    <string name="enroll_indicate">Press and hold "AP" button for\n5 seconds to open Wi-Fi function</string>
    <string name="not_login">"You have not logged in, do you want to log in now?</string>
    <string name="error_code_10">"Invalid Wi-Fi password input for last time enrollment, please ensure to input correct password this time.</string>
    <string name="error_code_20">"Input network cannot be found, make sure you used an valid network in this time.</string>
    <string name="error_code_30">"Input network cannot be found, make sure you used an valid network in this time.</string>
    <string name="enroll_long_press">Long press</string>
    <string name="enroll_page1_title_line1"> </string>
    <string name="enroll_page1_title_line2">WiFi button until sound echoed</string>
    <string name="enroll_page2_title_line1">Find one</string>
    <string name="enroll_page2_title_line2">Air Touch-S</string>
    <string name="enroll_page2_title_line3">Name your device</string>
    <string name="enroll_page2_title_line4">Home Location</string>
    <string name="enroll_page2_title_line5">Name your home</string>
    <string name="enroll_page3_title_line1">Connect Air Touch to</string>
    <string name="enroll_page3_title_line2">Home WiFi</string>
    <string name="enroll_password_title1"> </string>
    <string name="enroll_password_title2">\'s password</string>
    <string name="enroll_name_done">Done</string>
    <string name="login_email">Email</string>
    <string name="login_forget_password">Forgot password?</string>
    <string name="login_remember_password">Remember password</string>
    <string name="login_new_user">New user</string>
    <string name="login">Login</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="log_in_reg">Login</string>
    <string name="register">Register</string>
    <string name="registering">Register</string>
    <string name="register_email">Email (User Account)</string>
    <string name="register_accept_terms">I have read and agreed the terms</string>
    <string name="register_nick_name">Nickname</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_password_guide">6-30 figures and letters, at least one uppercase\ncharacter and one
        lowercase character.</string>
    <string name="password_format_wrong">Password does not meet rules, please re-enter.</string>
    <string name="password_invalid">Login failed, mobile or password  was incorrect.</string>
    <string name="password_not_match">Password does not match</string>
    <string name="password_length_wrong">Password too short, must be at least 6 characters.</string>
    <string name="nickname_format_wrong">Nickname should not contain special character.</string>
    <string name="my_places">My home(s)</string>
    <string name="set_as_default">Set this home as default</string>
    <string name="remove_this_home">Remove</string>
    <string name="rename_this_home">Rename this home</string>
    <string name="renaming">Renaming</string>
    <string name="remove_home_fail">Oops! Fail to delete home because there are devices inside. Please delete
        devices first to proceed.</string>
    <string name="add_place">Add home</string>
    <string name="add_to_home">Add to homes</string>
    <string name="search_place">Search home location</string>
    <string name="name_place">Name your home</string>
    <string name="home_name_empty">Please input correct home name.</string>
    <string name="enroll_gps">Location</string>
    <string name="enroll_gps_on">Locating</string>
    <string name="enroll_gps_fail">Not yet located</string>
    <string name="enroll_home">Name your home</string>
    <string name="enroll_device">Name your device</string>
    <string name="my_home">MyHome01</string>
    <string name="my_device">MyDevice01</string>
    <string name="enroll_select">Select</string>
    <string name="enroll_loading">Loading</string>
    <string name="adding_home">Adding home</string>
    <string name="deleting_home">Deleting home</string>
    <string name="adding_device">Adding device</string>
    <string name="checking_device">Checking device</string>
    <string name="add_device">Add device</string>
    <string name="add_device_fail">Add device fail</string>
    <string name="delete_device_fail">Delete device fail</string>
    <string name="device_not_alive">The device is not connected to internet.This operation will not succeed. Please exit and try to add device again. At that time, you would receive error log why operation failed last time.</string>
    <string name="device_not_control">Remote control has been disabled.</string>
    <string name="select_location">Select location</string>
    <string name="search">Search&#8230;</string>
    <string name="gps">Location:</string>
    <string name="reconnect">Reconnect</string>
    <string name="select_city">Please select location first.</string>
    <string name="max_home">You have reached the limit number of home, please select a home that already exists.</string>
    <string name="max_home2">You have reached the limit number of home, cannot add home anymore.</string>
    <string name="same_home">This name has been used, please use another one.</string>
    <string name="max_device">You have reached the limit number of device.</string>
    <string name="device_already_registered">The device is already registered by you, do you want to continue
        to change Wifi setting?</string>
    <string name="device_already_registered_by_another">The device is already registered by another user.</string>
    <string name="device_registered">The device is already registered.</string>
    <string name="network_retry">We are having trouble reaching to internet, please ensure if your smart phone connects to a valid Wi-Fi or opens cellular network.</string>
    <string name="control_auto">Auto</string>
    <string name="control_quick">Quick</string>
    <string name="control_sleep">Sleep</string>
    <string name="control_silent">Quiet</string>
    <string name="device_offline">Device is offline.</string>
    <string name="device_control">Connecting device, please wait.</string>
    <string name="input_quick">Your input is too quick.</string>
    <string name="control_timeout">Operation time out, please re-try.</string>
    <string name="wait_for_connection">Waiting for connection.</string>
    <string name="arriving_home">Preparing for your arrival at</string>
    <string name="clean_time_hour">Clean up finished in %1$d h</string>
    <string name="clean_time_minute">Clean up finished in %1$d mins</string>
    <string name="device_auto">Auto</string>
    <string name="device_quick">Quick</string>
    <string name="device_sleep">Sleep</string>
    <string name="device_silent">Silent</string>
    <string name="device_pm25">PM2.5</string>
    <string name="firmware_version">Firmware version:</string>
    <string name="filter_status">Filter remains</string>
    <string name="buy_it">Buy it</string>
    <string name="pre_filter">Pre-filter</string>
    <string name="pm25_filter">HEPA filter</string>
    <string name="hisiv_filter">HiSiv filter</string>
    <string name="filter_instruction">Filter instruction</string>
    <string name="no_need_to_buy">No need to buy</string>
    <string name="pre_filter_instruction">Removes hair and large particles, extends the life of other filters.</string>
    <string name="pm25_filter_instruction">Effective removal of PM2.5 particles, high capacity, low resistance.</string>
    <string name="hisiv_filter_instruction">Removes multiple harmful gases, maintains effectiveness even under humid conditions.</string>
    <string name="pre_filter_suggestion">The pre-filter only needs to be replaced if damaged.
        Otherwise please follow the instructions in the manual and clean it regularly.</string>
    <string name="places_care">My home(s)</string>
    <string name="edit_places">Edit</string>
    <string name="user_guide">User guide</string>
    <string name="eula">Acceptance</string>
    <string name="change_password">Change password</string>
    <string name="login_ongoing">Auto login now, please wait.</string>
    <string name="tell_air_touch">Set</string>
    <string name="tell_success">Setting time succeed.</string>
    <string name="cancel_success">Cancel time succeed.</string>
    <string name="cancel_fail">Cancel time fail.</string>
    <string name="tell_fail">Setting time of arriving home fail.</string>
    <string name="user_not_login">I have not logged in.</string>
    <string name="load_weather_data">Loading weather data now, please wait.</string>
    <string name="honeywell">Honeywell</string>
    <string name="air_cleaner">Smart Air Touch</string>
    <string name="disclaimer_first">The PAH and Lead concentrations provided are the China average.</string>
    <string name="disclaimer_second">Actual local concentration may vary by region.</string>
</resources>