<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/enroll_page1_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/long_press_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_long_press"
            android:textColor="@color/enroll_blue2"
            android:textSize="45sp"/>

        <TextView
            android:id="@+id/title_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/long_press_tv"
            android:layout_toEndOf="@id/long_press_tv"
            android:layout_alignBottom="@id/long_press_tv"
            android:text="@string/enroll_page1_title_line1"
            android:textColor="@color/enroll_page1_title"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/title_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_line1"
            android:layout_marginTop="5dp"
            android:text="@string/enroll_page1_title_line2"
            android:textColor="@color/enroll_page1_title"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/scanStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_line2"
            android:layout_alignLeft="@id/title_line2"
            android:layout_alignStart="@id/title_line2"
            android:layout_marginTop="20dp"
            android:text="@string/enroll_scanning"
            android:textColor="@color/enroll_blue"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/scanStatusTv"
            android:layout_toEndOf="@id/scanStatusTv"
            android:layout_alignBottom="@id/scanStatusTv"
            android:background="@drawable/loading_points"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/machine_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enroll_page1_title_layout"
        android:layout_marginBottom="35dp"
        android:src="@drawable/machine_black"/>

    <ListView
        android:id="@+id/wifi_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:visibility="invisible"/>

</RelativeLayout>