<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="true"
              android:background="@drawable/enrollment_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/enroll_page3_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp">

        <TextView
            android:id="@+id/title_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_page3_title_line1"
            android:textColor="@color/enroll_page1_title"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/connect_wifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_line1"
            android:text="@string/enroll_page3_title_line2"
            android:textColor="@color/enroll_blue2"
            android:textSize="40sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rescan_prompt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/rescanTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll_scanning"
            android:textColor="@color/enroll_blue"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/rescanTv"
            android:background="@drawable/loading_points"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/networks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/enroll_networks"
            android:textColor="@color/enroll_title_grey"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/enroll_rescan"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/wifi_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="30"/>

    </LinearLayout>

</LinearLayout>